--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.yookue.springstarter</groupId>
     <artifactId>p6spy-spring-boot-starter</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.1</version>
 
     <name>${project.artifactId}</name>
     <description>P6spy for Spring Boot Starter</description>
@@ -47,12 +47,12 @@
         <project.build.resourceEncoding>${file.encoding}</project.build.resourceEncoding>
         <project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
 
-        <spring-boot.version>3.4.0</spring-boot.version>
+        <spring-boot.version>3.4.1</spring-boot.version>
 
-        <p6spy.version>3.9.2</p6spy.version>
-        <plexus-spring-util.version>3.4.0</plexus-spring-util.version>
+        <p6spy.version>[4.0.1,)</p6spy.version>
+        <plexus-spring-util.version>3.4.1</plexus-spring-util.version>
 
-        <javadoc-docent-maven-plugin.version>2.0.0</javadoc-docent-maven-plugin.version>
+        <javadoc-docent-maven-plugin.version>2.0.2</javadoc-docent-maven-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
         <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
